--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://openaccess.thecvf.com/content/CVPR2024/html/Alfasly_Rotation-Agnostic_Image_Representation_Learning_for_Digital_Pathology_CVPR_2024_paper.html">
-                <papertitle>Rotation-Agnostic Image Representation Learning for Digital Pathology</papertitle>
+                <papertitle><b>Rotation-Agnostic Image Representation Learning for Digital Pathology</b></papertitle>
               </a>
               <br>
 	      <a>Saghir Alfasly</a>,
@@ -127,7 +127,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://www.sciencedirect.com/science/article/pii/S2949761224000142">
-                <papertitle>Foundation Models for Histopathology — Fanfare or Flair</papertitle>
+                <papertitle><b>Foundation Models for Histopathology — Fanfare or Flair</b></papertitle>
               </a>
               <br>
 	      <a>Saghir Alfasly</a>,
@@ -178,7 +178,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2311.09902">
-                <papertitle>Selection of Distinct Morphologies to Divide & Conquer Gigapixel Pathology Images</papertitle>
+                <papertitle><b>Selection of Distinct Morphologies to Divide & Conquer Gigapixel Pathology Images</b></papertitle>
               </a>
               <br>
               <strong>Abubakr Shafique</strong>,
