--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr>
               <td style="padding:16px;width:100%;vertical-align:middle">
-                <h2><b>Research:</b></h2>
+                <h2><b>Research</b></h2>
                 <p>
                   I am interested in computer vision, deep learning, generative AI, image processing, and natural language processing.<br>
 				  My research primarily focuses on representation learning and understanding self-supervised learning and foundation models in medical imaging, encompassing both uni-modal (vision or language) and multi-modal (vision-language, vision-genomics) frameworks.<br> 
