--- a/index.html
+++ b/index.html
@@ -58,6 +58,92 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px 10px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>      
   
+  
+			
+			<tr onmouseout="nerfsuper_stop()" onmouseover="nerfsuper_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='malle_image'>
+                  <img src='images/HistoLite.png' width="160"></div>
+                <img src='images/HistoLite.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function malle_start() {
+                  document.getElementById('HistoLite').style.opacity = "1";
+                }
+
+                function malle_stop() {
+                  document.getElementById('HistoLite').style.opacity = "0";
+                }
+                malle_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://www.nature.com/articles/s41598-025-20411-0">
+                <papertitle><b>Lightweight self supervised learning framework for domain generalization in histopathology</b></papertitle>
+              </a>
+              <br>
+		   <strong>   Abubakr Shafique</strong>,
+		   <a>   Amanda Dy</a>,
+		   <a>   Xiaoli Qin</a>,
+		   <a>   Najd Alshamlan</a>,
+		   <a>   Susan J. Done</a>,
+		  <a>    Dimitrios Androutsos</a>,
+		 <a>     April Khademi </a>,
+              <br>
+              <em>Scientific Reports</em>, 2025
+              <br>
+              [<a href="https://www.nature.com/articles/s41598-025-20411-0">Paper</a>]
+			  [<a href="https://static-content.springer.com/esm/art%3A10.1038%2Fs41598-025-20411-0/MediaObjects/41598_2025_20411_MOESM1_ESM.pdf">Supplementary</a>]
+              <p></p>
+              <p>
+              This study introduces HistoLite, a lightweight self-supervised learning framework for domain-invariant representation learning in histopathology. Using a dual-scanner dataset, it evaluates the impact of scanner-induced covariate shifts on foundation models, revealing their susceptibility to scanner bias. HistoLite demonstrates reduced representation shift and improved generalization, highlighting its efficiency and robustness compared to large-scale models.
+			  </p>
+            </td>
+          </tr>
+			
+
+			<tr onmouseout="nerfsuper_stop()" onmouseover="nerfsuper_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='malle_image'>
+                  <img src='images/RepShift.png' width="160"></div>
+                <img src='images/RepShift.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function malle_start() {
+                  document.getElementById('RepShift').style.opacity = "1";
+                }
+
+                function malle_stop() {
+                  document.getElementById('RepShift').style.opacity = "0";
+                }
+                malle_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://link.springer.com/chapter/10.1007/978-3-032-05870-6_4">
+                <papertitle><b>How Fair are Foundation Models? Exploring the Role of Covariate Bias in Histopathology</b></papertitle>
+              </a>
+              <br>
+		   <strong>   Abubakr Shafique</strong>,
+		   <a>   Amanda Dy</a>,
+		   <a>   Xiaoli Qin</a>,
+		   <a>   Najd Alshamlan</a>,
+		   <a>   Susan J. Done</a>,
+		  <a>    Dimitrios Androutsos</a>,
+		 <a>     April Khademi </a>,
+              <br>
+              <em>MICCAI Fairness of AI in Medical Imaging</em>, (FAIMI 2025)
+              <br>
+              [<a href="https://link.springer.com/chapter/10.1007/978-3-032-05870-6_4">Paper</a>]
+              <p></p>
+              <p>
+              This paper investigates the impact of covariate shift, particularly those arising from scanner-specific variations, on the performance and robustness of foundation models in computational histopathology.
+			  </p>
+            </td>
+          </tr>
+
 
             <tr onmouseout="nerfsuper_stop()" onmouseover="nerfsuper_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -66,7 +152,6 @@
                 <source src="images/PathDino.mp4" type="video/mp4">
                 Your browser does not support the video tag.
                 </video></div>
-<!--                 <img src='images/PathDino.jpg' width="160"> -->
               </div>
               <script type="text/javascript">
                 function nerfsuper_start() {
@@ -107,7 +192,7 @@
             </td>
           </tr>
 
-		 		 	<tr onmouseout="nerfsuper_stop()" onmouseover="nerfsuper_start()">
+			<tr onmouseout="nerfsuper_stop()" onmouseover="nerfsuper_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='malle_image'>
