--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
                 <papertitle><b>Lightweight self supervised learning framework for domain generalization in histopathology</b></papertitle>
               </a>
               <br>
-		   <strong>   Abubakr Shafique</strong>,
-		   <a>   Amanda Dy</a>,
-		   <a>   Xiaoli Qin</a>,
-		   <a>   Najd Alshamlan</a>,
-		   <a>   Susan J. Done</a>,
-		  <a>    Dimitrios Androutsos</a>,
-		 <a>     April Khademi </a>,
+		   <strong>Abubakr Shafique</strong>,
+			<a>Amanda Dy</a>,
+			<a>Xiaoli Qin</a>,
+			<a>Najd Alshamlan</a>,
+			<a>Susan J. Done</a>,
+			<a>Dimitrios Androutsos</a>,
+			<a>April Khademi</a>,
               <br>
               <em>Scientific Reports</em>, 2025
               <br>
@@ -126,13 +126,13 @@
                 <papertitle><b>How Fair are Foundation Models? Exploring the Role of Covariate Bias in Histopathology</b></papertitle>
               </a>
               <br>
-		   <strong>   Abubakr Shafique</strong>,
-		   <a>   Amanda Dy</a>,
-		   <a>   Xiaoli Qin</a>,
-		   <a>   Najd Alshamlan</a>,
-		   <a>   Susan J. Done</a>,
-		  <a>    Dimitrios Androutsos</a>,
-		 <a>     April Khademi </a>,
+		   <strong>Abubakr Shafique</strong>,
+			<a>Amanda Dy</a>,
+			<a>Xiaoli Qin</a>,
+			<a>Najd Alshamlan</a>,
+			<a>Susan J. Done</a>,
+			<a>Dimitrios Androutsos</a>,
+			<a>April Khademi</a>,
               <br>
               <em>MICCAI Fairness of AI in Medical Imaging</em>, (FAIMI 2025)
               <br>
@@ -140,6 +140,47 @@
               <p></p>
               <p>
               This paper investigates the impact of covariate shift, particularly those arising from scanner-specific variations, on the performance and robustness of foundation models in computational histopathology.
+			  </p>
+            </td>
+          </tr>
+		  
+		  			<tr onmouseout="nerfsuper_stop()" onmouseover="nerfsuper_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='malle_image'>
+                  <img src='images/MiDOG2025.png' width="160"></div>
+                <img src='images/MiDOG2025.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function malle_start() {
+                  document.getElementById('MiDOG2025').style.opacity = "1";
+                }
+
+                function malle_stop() {
+                  document.getElementById('MiDOG2025').style.opacity = "0";
+                }
+                malle_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2509.03614">
+                <papertitle><b>Teacher-Student Model for Detecting and Classifying Mitosis in the MIDOG 2025 Challenge</b></papertitle>
+              </a>
+              <br>
+			<a>Seungho Choe</a>,
+			<a>Xiaoli Qin</a>,
+		   <strong> Abubakr Shafique</strong>,
+			<a>Amanda Dy</a>,
+			<a>Susan Done</a>,
+			<a>Dimitrios Androutsos</a>,
+			<a>April Khademi</a>,
+              <br>
+              <em>MICCAI Mitosis Domain Generalization Challenge</em>, (MIDOG 2025)
+              <br>
+              [<a href="https://arxiv.org/abs/2509.03614">Paper</a>]
+              <p></p>
+              <p>
+              This work presents a teacher-student segmentation framework for robust mitosis detection and atypical mitosis classification. Built on a UNet backbone with contrastive and domain-adversarial learning, the model mitigates domain shift and data imbalance. It achieved strong performance (F1 = 0.7660, balanced accuracy = 0.8414), highlighting the effectiveness of unified detection and classification for reliable mitosis analysis.
 			  </p>
             </td>
           </tr>
