--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
 
             <tr>
               <td style="padding:0px;width:100%;vertical-align:center">
+				<a href=""> <b>AI to Improve Cancer Care</b>, at Canadian Cancer Trials Group Annual Spring Meeting <br>(April, 2025)</a><br>
                 <a href=""> <b>How Fair are Foundation Models? Exploring the Role of Covariate Bias in Histopathology</b>, at Stanford MedAI Group <br>(October, 2025)</a><br>				  
                 <a href=""> <b>How Fair are Foundation Models? Exploring the Role of Covariate Bias in Histopathology</b>, at Abbvie CVRT Imaging Seminar <br>(February, 2026)</a><br>
               </td>
